--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,10 @@
 #    pip-compile --extra=dev pyproject.toml
 #
 aiohttp==3.9.5
-    # via litellm
+    # via
+    #   litellm
+    #   llama-index-core
+    #   llama-index-legacy
 aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.7.0
@@ -21,6 +24,8 @@ attrs==23.2.0
     #   aiohttp
     #   jsonschema
     #   referencing
+beautifulsoup4==4.12.3
+    # via llama-index-readers-file
 certifi==2024.7.4
     # via
     #   httpcore
@@ -29,9 +34,23 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
-    # via litellm
+    # via
+    #   litellm
+    #   nltk
+dataclasses-json==0.6.7
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
+deprecated==1.2.14
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
 dill==0.3.8
     # via pylint
+dirtyjson==1.0.8
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
 distro==1.9.0
     # via openai
 filelock==3.15.4
@@ -41,14 +60,23 @@ frozenlist==1.4.1
     #   aiohttp
     #   aiosignal
 fsspec==2024.6.1
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   llama-index-core
+    #   llama-index-legacy
+greenlet==3.0.3
+    # via sqlalchemy
 h11==0.14.0
     # via httpcore
 httpcore==1.0.5
     # via httpx
 httpx==0.27.0
-    # via openai
-huggingface-hub==0.23.4
+    # via
+    #   llama-cloud
+    #   llama-index-core
+    #   llama-index-legacy
+    #   openai
+huggingface-hub==0.24.1
     # via tokenizers
 idna==3.7
     # via
@@ -56,7 +84,7 @@ idna==3.7
     #   httpx
     #   requests
     #   yarl
-importlib-metadata==8.0.0
+importlib-metadata==8.1.0
     # via litellm
 isort==5.13.2
     # via pylint
@@ -64,82 +92,217 @@ jinja2==3.1.4
     # via
     #   litellm
     #   realign (pyproject.toml)
+joblib==1.4.2
+    # via nltk
 jsonschema==4.23.0
     # via litellm
 jsonschema-specifications==2023.12.1
     # via jsonschema
 lazy-object-proxy==1.10.0
     # via astroid
-litellm==1.41.14
+litellm==1.41.27
     # via realign (pyproject.toml)
+llama-cloud==0.0.9
+    # via llama-index-indices-managed-llama-cloud
+llama-index==0.10.57
+    # via realign (pyproject.toml)
+llama-index-agent-openai==0.2.9
+    # via
+    #   llama-index
+    #   llama-index-program-openai
+llama-index-cli==0.1.13
+    # via llama-index
+llama-index-core==0.10.57
+    # via
+    #   llama-index
+    #   llama-index-agent-openai
+    #   llama-index-cli
+    #   llama-index-embeddings-openai
+    #   llama-index-indices-managed-llama-cloud
+    #   llama-index-llms-openai
+    #   llama-index-multi-modal-llms-openai
+    #   llama-index-program-openai
+    #   llama-index-question-gen-openai
+    #   llama-index-readers-file
+    #   llama-index-readers-llama-parse
+    #   llama-parse
+llama-index-embeddings-openai==0.1.11
+    # via
+    #   llama-index
+    #   llama-index-cli
+llama-index-indices-managed-llama-cloud==0.2.5
+    # via llama-index
+llama-index-legacy==0.9.48
+    # via llama-index
+llama-index-llms-openai==0.1.27
+    # via
+    #   llama-index
+    #   llama-index-agent-openai
+    #   llama-index-cli
+    #   llama-index-multi-modal-llms-openai
+    #   llama-index-program-openai
+    #   llama-index-question-gen-openai
+llama-index-multi-modal-llms-openai==0.1.8
+    # via llama-index
+llama-index-program-openai==0.1.7
+    # via
+    #   llama-index
+    #   llama-index-question-gen-openai
+llama-index-question-gen-openai==0.1.3
+    # via llama-index
+llama-index-readers-file==0.1.30
+    # via llama-index
+llama-index-readers-llama-parse==0.1.6
+    # via llama-index
+llama-parse==0.4.9
+    # via llama-index-readers-llama-parse
 markupsafe==2.1.5
     # via jinja2
+marshmallow==3.21.3
+    # via dataclasses-json
 mccabe==0.7.0
     # via pylint
 multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
-openai==1.35.11
-    # via litellm
+mypy-extensions==1.0.0
+    # via typing-inspect
+nest-asyncio==1.6.0
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
+networkx==3.3
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
+nltk==3.8.1
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
+numpy==1.26.4
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
+    #   pandas
+openai==1.37.0
+    # via
+    #   litellm
+    #   llama-index-agent-openai
+    #   llama-index-core
+    #   llama-index-legacy
 packaging==24.1
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   marshmallow
+pandas==2.2.2
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
+pillow==10.4.0
+    # via llama-index-core
 platformdirs==4.2.2
     # via pylint
 pydantic==2.8.2
     # via
     #   litellm
+    #   llama-cloud
     #   openai
 pydantic-core==2.20.1
     # via pydantic
 pylint==2.16.2
     # via realign (pyproject.toml)
+pypdf==4.3.1
+    # via llama-index-readers-file
+python-dateutil==2.9.0.post0
+    # via pandas
 python-dotenv==1.0.1
     # via
     #   litellm
     #   realign (pyproject.toml)
+pytz==2024.1
+    # via pandas
 pyyaml==6.0.1
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   llama-index-core
 referencing==0.35.1
     # via
     #   jsonschema
     #   jsonschema-specifications
 regex==2024.5.15
-    # via tiktoken
+    # via
+    #   nltk
+    #   tiktoken
 requests==2.32.3
     # via
     #   huggingface-hub
     #   litellm
+    #   llama-index-core
+    #   llama-index-legacy
     #   tiktoken
 rpds-py==0.19.0
     # via
     #   jsonschema
     #   referencing
+six==1.16.0
+    # via python-dateutil
 sniffio==1.3.1
     # via
     #   anyio
     #   httpx
     #   openai
+soupsieve==2.5
+    # via beautifulsoup4
+sqlalchemy[asyncio]==2.0.31
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
+striprtf==0.0.26
+    # via llama-index-readers-file
+tenacity==8.5.0
+    # via
+    #   llama-index-core
+    #   llama-index-legacy
 tiktoken==0.7.0
-    # via litellm
+    # via
+    #   litellm
+    #   llama-index-core
+    #   llama-index-legacy
 tokenizers==0.19.1
     # via litellm
-tomlkit==0.12.5
+tomlkit==0.13.0
     # via pylint
 tqdm==4.66.4
     # via
     #   huggingface-hub
+    #   llama-index-core
+    #   nltk
     #   openai
 typing-extensions==4.12.2
     # via
     #   huggingface-hub
+    #   llama-index-core
+    #   llama-index-legacy
     #   openai
     #   pydantic
     #   pydantic-core
+    #   sqlalchemy
+    #   typing-inspect
+typing-inspect==0.9.0
+    # via
+    #   dataclasses-json
+    #   llama-index-core
+    #   llama-index-legacy
+tzdata==2024.1
+    # via pandas
 urllib3==2.2.2
     # via requests
 wrapt==1.16.0
-    # via astroid
+    # via
+    #   astroid
+    #   deprecated
+    #   llama-index-core
 yarl==1.9.4
     # via aiohttp
 zipp==3.19.2
