--- a/tutorials/tweetbot/config.yaml
+++ b/tutorials/tweetbot/config.yaml
@@ -37,5 +37,22 @@ evaluators:
     asserts: off
     criteria: |
       The tweet should not talk about AI.
+    
+  hf_hate_speech:
+    wraps: hf_pipeline
+    model: facebook/roberta-hate-speech-dynabench-r4-target
+    task: text-classification
 
+    checker: value['label'] in target
+    target: [nothate]
+    asserts: on
+
+  hf_sentiment_classifier:
+    wraps: hf_pipeline
+    task: text-classification
+    model: cardiffnlp/twitter-roberta-base-sentiment-latest
+
+    checker: value['label'] in target
+    target: [positive, neutral]
+    asserts: on
 
