simplified imports, added config utility, fixed elo

--- a/src/realign/defaults.yaml
+++ b/src/realign/defaults.yaml
@@ -30,8 +30,8 @@ llm_agents:
       {{ criteria }}
 
       {% for choice in choices %}
-          [Choice {{ loop.index }}]<br>
-          {{ choice }}<br>
+          [Choice {{ loop.index }}]
+          {{ choice }}
       {% endfor %}
 
       [Selection]
