--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "realign"
 version = "0.1.38"
 dependencies = [
+    "honeyhive",
     "litellm",
     "jinja2",
     "python-dotenv",
