--- a/test/config.yaml
+++ b/test/config.yaml
@@ -33,10 +33,24 @@ llm_agents:
 
 evaluators:
 
-  tweet_char_count:
-    transform: value + 100
-    checker: numrange
-    target: (0, 280]
+
+    
+  hf_hate_speech:
+    wraps: hf_pipeline
+    task: text-classification
+    model: facebook/roberta-hate-speech-dynabench-r4-target
+
+    checker: value['label'] in target
+    target: [nothate]
+    asserts: on
+
+  hf_sentiment_classifier:
+    wraps: hf_pipeline
+    task: text-classification
+    model: cardiffnlp/twitter-roberta-base-sentiment-latest
+
+    checker: value['label'] in target
+    target: [positive, neutral]
     asserts: on
 
   tweet_judge:
